




Version 1.5
	- Version 1.5.0

Developer Version
	- 1.0.1 Development
	- 1.0.2 Development
	- 1.0.3 Development
	- 1.0.4 Development
	- 1.0.5 Development
	- 1.0.6 Development
	- 1.0.7 Development
	- 1.5.0 Stable
	- 1.5.1 Stable
	- 1.5.2 Stable
	- 1.5.3 Stable
	- 1.5.4 Stable
	- 1.5.5 Stable
	- 1.5.6 Stable

Building Steps: 2770



 Version 1.5.6 Stable
-----------------------------------------------------------------

 - bug #0000154: 

 - security fixed: 

 - bug fixed: 

 - changed: 

 - added: Firefox support for the RSS subscription.




 Version 1.5.5 Stable
-----------------------------------------------------------------

 - bug #0000154: File mail.php generates errors on loading.
 - bug #0000155: It can only one comment written to one news.
 - bug #0000156: Missing language define in the english language file.
 - bug #0000158: Converting @ symbols into __NO_SPAM__ in converted mailsadresses.
 - bug #0000159: The template manager cannot execute the chmod function.
 - bug #0000152: Displaying a part of the news in the login module, if the login
                 module is on the right side of the page.

 - security fixed: 

 - bug fixed: The search-class cannot search on a MS SQL Server.
 - bug fixed: The comments loaded without the email adress.
 - bug fixed: If a person who writes a comment doenst have a gravatar
              icon, he gets now the default gravatar logo.
 - bug fixed: Gallery administration overview generates an error.
 - bug fixed: The Gallery Frontend has some bugs.
 - bug fixed: Guestbook title are not using the html class method.
 - bug fixed: A very small encoding bug in tcms.lib.php.

 - changed: 

 - added: New color theme "Garcia Solar Landscape" to the K2 theme.




Version 1.5.4 Stable
-----------------------------------------------------------------

 - bug #0000148: you cannot add more then one comment on a news:
                 drop the primary key for the comments table
 - bug #0000149: konqueror display error